--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,15 +44,23 @@ body {
   margin-top: 50px;
 }
 
+.sidebar-inner{
+  /* position: fixed; */
+}
+
 .user-area{
   display: flex;
   align-items: center;
 }
-.user-icon{width: 70px;}
+.user-icon{
+  width: 70px;
+   margin-right: 20px;
+}
 .user-icon img{width: 100%;}
 
 .user-detail h2{
   font-size: 30px;
+  margin-bottom: 5px;
 }
 .user-detail img{
   width: 15px;
@@ -67,8 +75,10 @@ body {
   border: 1px solid #000;
   border-radius: 10px;
   max-width: 100%;
+  width: 100%;
   height: 150px;
   margin: 20px 0;
+  padding: 10px;
 }
 
 .post-area input{
