--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,55 +25,44 @@
   </header>
 
   <aside class="sidebar">
-    <section class="user-area">
-      <div class="user-icon">
-        <img src="images/user-icon.png" alt="user-icon">
-      </div>
-      <div class="user-detail">
-          <h2>name</h2>
-          <p><a href="/">profile<img src="images/new-window.png" alt="new-window"></a></p>
-      </div>
-    </section>
-    <section class="post-area">
-      <form action="#">
-        <textarea name="text" id="" cols="30" rows="10" placeholder="new micropost"></textarea>
-        <input type="submit" value="post">
-      </form>
-    </section>
+    <article class="sidebar-inner">
+      <section class="user-area">
+        <div class="user-icon">
+          <img src="images/user-icon.png" alt="user-icon">
+        </div>
+        <div class="user-detail">
+            <h2>name</h2>
+            <p><a href="/">profile<img src="images/new-window.png" alt="new-window"></a></p>
+        </div>
+      </section>
+      <section class="post-area">
+        <form action="/" method="post">
+          <textarea name="text" id="" cols="30" rows="10" placeholder="new micropost"></textarea>
+          <input type="submit" value="post">
+        </form>
+      </section>
+    </article>
   </aside>
   <main class="main">
 
     <section class="archive-area">
       <ul class="archive-list">
-        <li class="archive-item">
-          <div class="archive-item__user">
-            <img src="images/user-icon.png" alt="user-icon">
-            <p><span>name</span></p>
-          </div>
-          <div class="archive-item__status">
-            <input type="submit" value="edit">
-            <input type="submit" value="delete">
-          </div>
-          <div class="archive-item__post">
-            <p>postpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpost</p>
+        <% for (let message of messageArray) { %>
+          <li class="archive-item">
+            <div class="archive-item__user">
+              <img src="images/user-icon.png" alt="user-icon">
+              <p><span>name</span></p>
+            </div>
+            <div class="archive-item__status">
+              <input type="submit" value="edit">
+              <input type="submit" value="delete">
+            </div>
+            <div class="archive-item__post">
+            <p><%= message %></p>
             <time>2022/05/15/00:00</time>
           </div>
-        </li>
-
-        <li class="archive-item">
-          <div class="archive-item__user">
-            <img src="images/user-icon.png" alt="user-icon">
-            <p><span>name</span></p>
-          </div>
-          <div class="archive-item__status">
-            <input type="submit" value="edit">
-            <input type="submit" value="delete">
-          </div>
-          <div class="archive-item__post">
-            <p>postpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpostpost</p>
-            <time>2022/05/15/00:00</time>
-          </div>
-        </li>
+        </li> 
+        <% } %>
       </ul>
     </section>
   </main>
