--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -135,3 +135,11 @@ body {
   margin: 10px 0;
   font-size: 10px;
 }
+
+@media screen and (max-width:900px) {
+  body{
+    display: block;
+    max-width: 540px;
+  }
+  .sidebar,.main{width: auto;}
+}
