--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,8 +18,8 @@
     </div>
     <nav>
       <ul class="menu">
-        <li class="menu-item"><a href="/signup">Signup</a></li>
-        <li class="menu-item"><a href="/signin">Signin</a></li>
+        <li class="menu-item"><a href="/signup">Sign up</a></li>
+        <li class="menu-item"><a href="/login">Log in</a></li>
       </ul>
     </nav>
   </header>
