--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
             <p>実名で真実を語ろう。</p>
         </div>
         <ul class="top-btn">
-            <li><a href="/signin">Sign in</a></li>
+            <li><a href="/login">Log in</a></li>
             <li><a href="/signup">Sign up</a></li>
         </ul>
     </section>
