--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,1 +1,27 @@
 <%- include( './header' ) %>
+<main class="signup-main">
+    <section class="sign-fv">
+        <div class="signup-title">
+            <h2>Sign up</h2>
+        </div>
+        <form action="/signup" method="post" class="signup-form">
+            <div class="form-group">
+                <label for="text">ユーザー名</label>
+                <input type="text" name="username" id="username">
+            </div>
+            <div class="form-group">
+                <label for="mail">メールアドレス</label>
+                <input type="mail" name="mail" id="mail">
+            </div>
+            <div class="form-group">
+                <label for="password">パスワード</label>
+                <input type="password" name="password" id="password">
+            </div>
+            <div class="form-group">
+                <label for="password_confirmation">パスワード確認</label>
+                <input type="password" name="password_confirmation" id="password_confirmation">
+            </div>
+            <input type="submit" value="Sign up">
+        </form>
+    </section>
+</main>
