ログアウトの実装

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -6,7 +6,7 @@
           <img src="images/user-icon.png" alt="user-icon">
         </div>
         <div class="user-detail">
-            <h2 id="username">taic-dev</h2>
+            <h2 id="username"><%- username %></h2>
             <p><a href="/">profile<img src="images/new-window.png" alt="new-window"></a></p>
         </div>
       </section>
@@ -25,7 +25,7 @@
           <li class="archive-item">
             <div class="archive-item__user">
               <img src="images/user-icon.png" alt="user-icon">
-              <p><span>taic-dev</span></p>
+              <p><span><%- username %></span></p>
             </div>
             <div class="archive-item__status">
               <input type="submit" value="edit">
