--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,8 +18,12 @@
     </div>
     <nav>
       <ul class="menu">
+        <% if(!isAuth){ %>
         <li class="menu-item"><a href="/signup">Sign up</a></li>
         <li class="menu-item"><a href="/login">Log in</a></li>
+        <% }else{ %>
+        <li class="menu-item"><a href="/logout">Log out</a></li>
+        <% } %>
       </ul>
     </nav>
   </header>
