Login/SignupのHTML/CSS作成

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include( './header' ) %>
 <main class="login-main">
-    <section class="sign-fv">
+    <section class="login-fv">
         <div class="login-title">
             <h2>Log in</h2>
         </div>
@@ -13,7 +13,7 @@
                 <label for="password">パスワード</label>
                 <input type="password" name="password" id="password">
             </div>
-            <input type="submit" value="Log in">
+            <input type="submit" value="Log in" class="login-btn">
         </form>
     </section>
 </main>
