--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <%- include( './header' ) %>
 <main class="signup-main">
-    <section class="sign-fv">
+    <section class="signup-fv">
         <div class="signup-title">
             <h2>Sign up</h2>
         </div>
@@ -21,7 +21,7 @@
                 <label for="password_confirmation">パスワード確認</label>
                 <input type="password" name="password_confirmation" id="password_confirmation">
             </div>
-            <input type="submit" value="Sign up">
+            <input type="submit" value="Sign up" class="signup-btn">
         </form>
     </section>
 </main>
