--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,12 +11,11 @@
 
 
 body {
-  display: flex;
-  justify-content: center;
-  max-width: 1000px;
-  margin: auto;
-  margin-top: 60px;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+main{
+  margin-top: 60px;
 }
 
 .header{
@@ -40,19 +39,20 @@ body {
 .menu-item a{color: white; text-decoration: none;}
 
 /* top */
-.top-main{
+.top-main,.login-main,.signup-main{
   position: relative;
   height: calc(100vh - 60px);
 }
 
-.top-fv{
+.top-fv,.login-fv,.signup-fv{
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%); 
   text-align: center;
 }
-.top-title h2{
+.top-title h2,.login-main h2,.signup-main h2{
   font-size: 100px;
   font-weight: bold;
 }
@@ -63,7 +63,7 @@ body {
   justify-content: center;
 }
 
-.top-btn li a{
+.top-btn li a,.login-btn,.signup-btn{
   color: var(--main-text-color);
   background: var(--main-bg-color);
   margin: 20px;
@@ -72,15 +72,59 @@ body {
   text-decoration: none;
 }
 
-.sidebar{
-  width: 40%;
-  margin: 0 20px;
-  margin-top: 50px;
+/* login */
+.login-form,.signup-form{
+  width: 300px;
+  margin: 50px auto;
 }
 
-.sidebar-inner{
-  /* position: fixed; */
+.form-group{
+  position: relative;
+  margin: 50px 0;
 }
+
+.form-group label{
+  color: var(--main-text-color);
+  background: var(--main-bg-color);
+  display: block;
+  width: 180px;
+  padding: 3px;
+  border-radius: 5px;
+
+  position: absolute;
+  top: 0;
+  left: 5px;
+}
+
+.form-group input{
+  width: 100%;
+  height: 30px;
+  text-align: left;
+  margin-top: 20px;
+  padding: 0 10px;
+  border: solid 1px;
+  border-radius: 5px;
+}
+
+.wrapper{
+  display: flex;
+  justify-content: center;
+  max-width: 1000px;
+  margin: auto;
+  margin-top: 60px;
+}
+
+.sidebar{
+  position: sticky;
+  top: 0;
+  width: 40%;
+  height: 100%;
+  margin: 0 20px;
+  margin-top: 50px;
+  padding: 10px 0;
+  background: var(--sub-bg-color);
+}
+
 
 .user-area{
   display: flex;
@@ -171,7 +215,7 @@ body {
 }
 
 @media screen and (max-width:900px) {
-  body{
+  .wrapper{
     display: block;
     max-width: 540px;
   }
