--- a/views/top.ejs
+++ b/views/top.ejs
@@ -12,6 +12,7 @@
       </section>
       <section class="post-area">
         <form action="/top" method="post">
+          <input type="hidden" name="username" value="<%= username %>">
           <textarea name="text" id="" cols="30" rows="10" placeholder="new micropost"></textarea>
           <input type="submit" value="post">
         </form>
@@ -24,7 +25,7 @@
             <li class="archive-item">
               <div class="archive-item__user">
                 <img src="images/user-icon.png" alt="user-icon">
-                <p><span><%= username %></span></p>
+                <p><span><%= value.username %></span></p>
               </div>
               <div class="archive-item__status">
                 <input type="submit" value="edit">
