--- a/views/top.ejs
+++ b/views/top.ejs
@@ -25,7 +25,7 @@
             <li class="archive-item">
               <div class="archive-item__user">
                 <img src="images/user-icon.png" alt="user-icon">
-                <p><span><%= value.username %></span></p>
+                <p><span><%= value.user_name %></span></p>
               </div>
               <form action="/delete" method="post" class="archive-item__status" onsubmit="return delete_btn()">
                 <input type="hidden" name="micropost_id" value="<%= value.id %>">
@@ -34,11 +34,7 @@
               <div class="archive-item__post">
               <p><%= value.message %></p>
               <time>
-                <%= 
-                  value.created_at.getFullYear()+"/"
-                  +(value.created_at.getMonth()+1)+"/"
-                  +value.created_at.getDate();
-                %>
+                <%= value.createdAt %>
               </time>
             </div>
           </li> 
@@ -48,4 +44,5 @@
     </main>
   </section>
 <script src="javascripts/index.js"></script>
+
 <%- include("./footer"); %>
