editページ追加

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -7,7 +7,7 @@
         </div>
         <div class="user-detail">
             <h2 id="username"><%= username %></h2>
-            <p><a href="/mypage">mypage<img src="images/new-window.png" alt="new-window"></a></p>
+            <p><a href="/profile">profile<img src="images/new-window.png" alt="new-window"></a></p>
         </div>
       </section>
       <section class="post-area">
