ユーザーの個別ページ作成

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,8 +7,8 @@
   <!-- fontAwesome -->
   <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="stylesheets/reset.css">
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="../stylesheets/reset.css">
+  <link rel="stylesheet" href="../stylesheets/style.css">
   <title>truthPost</title>
 </head>
 <body>
