--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
     <aside class="mypage-sidebar">
         <section class="mypage-area">
             <div class="mypage-icon">
-                <img src="images/user-icon.png" alt="user-icon">
+                <img src="../images/user-icon.png" alt="user-icon">
             </div>
         </section>
     </aside>
@@ -28,7 +28,7 @@
         <form action="/mypage" method="post">
             <span class="close-btn"><i class="fa-solid fa-xmark fa-lg"></i></span>
             <div class="form-group">
-                <img src="images/user-icon.png" alt="user-icon">
+                <img src="../images/user-icon.png" alt="user-icon">
             </div>
             <% if(message){ %>
                 <span class="success-message"><%= message %></span>
@@ -74,4 +74,4 @@
         </form>
     </dialog>
 </section>
-<script src="javascripts/index.js"></script>
+<script src="../javascripts/index.js"></script>
