--- a/views/top.ejs
+++ b/views/top.ejs
@@ -43,6 +43,6 @@
       </section>
     </main>
   </section>
-<script src="javascripts/index.js"></script>
+<script src="../javascripts/index.js"></script>
 
 <%- include("./footer"); %>
