--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,7 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<%- include("./header"); %>
+<section class="wrapper">
+    <h1><%= message %></h1>
+    <h2><%= error.status %></h2>
+    <pre><%= error.stack %></pre>
+</section>
+<%- include("./footer"); %>
