--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,6 +7,9 @@
         <div class="edit-form__delete">
             <a href="/delete" class="delete-btn">アカウント削除</a>
         </div>
+        <div class="">
+            <%= message %>
+        </div>
         <form action="/edit" method="post" enctype="multipart/form-data" class="edit-form">
             <ul class="edit-form__list">
                 <li class="edit-form__item">
