--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
         <div class="signup-title">
             <h2>Sign up</h2>
         </div>
-        <form action="/signup" method="post" class="signup-form">
+        <form action="/signup" method="post" enctype="multipart/form-data" class="signup-form">
             <% if(errors){ %>
                 <% errors.find(obj=>{ %>
                     <% if(obj.param == 'signup_error'){ %>
@@ -49,7 +49,13 @@
                     <% }); %>
                 <% } %>
             </div>
+            <div class="form-group">
+                <img src="#" alt="ユーザアイコン" id="image">
+                <input type="file" id="file-change" name="file">
+            </div>
             <input type="submit" value="Sign up" class="signup-btn">
         </form>
     </section>
 </main>
+<script src="../javascripts/index.js"></script>
+<%- include( './footer' ) %>
