signup 画像アップロード

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -50,7 +50,7 @@
                 <% } %>
             </div>
             <div class="form-group">
-                <img src="#" alt="ユーザアイコン" id="image">
+                <img src="uploads/sample.png" alt="ユーザアイコン" id="image">
                 <input type="file" id="file-change" name="file">
             </div>
             <input type="submit" value="Sign up" class="signup-btn">
