--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,12 +73,12 @@ main{
 .menu-item a{color: white; text-decoration: none;}
 
 /* top */
-.top-main,.login-main,.signup-main{
+.top-main,.login-main{
   position: relative;
   height: calc(100vh - 60px);
 }
 
-.top-fv,.login-fv,.signup-fv{
+.top-fv,.login-fv{
   width: 100%;
   position: absolute;
   top: 50%;
@@ -86,6 +86,11 @@ main{
   transform: translateY(-50%) translateX(-50%); 
   text-align: center;
 }
+
+.signup-fv{
+  text-align: center;
+}
+
 .top-title h2,.login-main h2,.signup-main h2{
   font-size: 100px;
   font-weight: bold;
