editページ 画像の変更

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,8 +14,8 @@
             <ul class="edit-form__list">
                 <li class="edit-form__item">
                     <div class="edit-form__img">
-                        <img src="../images/user-icon.png" alt="ユーザアイコン" id="image">
-                        <input type="file" id="file-change">
+                        <img src="../uploads/<%= form.img %>" alt="ユーザアイコン" id="image">
+                        <input type="file" id="file-change" name="file">
                     </div>
                 </li>
                 <li class="edit-form__item">
