トップの画像を表示

--- a/views/top.ejs
+++ b/views/top.ejs
@@ -3,7 +3,7 @@
     <aside class="sidebar">
       <section class="user-area">
         <div class="user-icon">
-          <img src="images/user-icon.png" alt="user-icon">
+          <img src="uploads/<%= img %>" alt="user-icon">
         </div>
         <div class="user-detail">
             <h2 id="username"><%= username %></h2>
