javascript/index.js リファクタリング

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,7 +15,7 @@
                 <li class="edit-form__item">
                     <div class="edit-form__img">
                         <img src="../uploads/<%= form.img %>" alt="ユーザアイコン" id="image">
-                        <input type="file" id="file-change" name="file">
+                        <input type="file" id="file-change" name="file" onchange="fileChange(event);">
                     </div>
                 </li>
                 <li class="edit-form__item">
