--- a/views/top.ejs
+++ b/views/top.ejs
@@ -28,7 +28,7 @@
                 <img src="uploads/<%= value.img %>" alt="user-icon">
                 <p><span><%= value.user_name %></span></p>
               </div>
-              <form action="/delete" method="post" class="archive-item__status" onsubmit="return delete_btn()">
+              <form action="/delete" method="post" class="archive-item__status" onsubmit="return doDelete();">
                 <input type="hidden" name="micropost_id" value="<%= value.id %>">
                 <input type="submit" value="delete">
               </form>
